--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "npm run lint:ts && npm run lint:html && npm run lint:scss",
     "lint:ts": "npx ng lint",
-    "lint:html": "npx htmlhint 'src/**/*.html'",
-    "lint:scss": "npx stylelint 'src/**/*.scss'",
+    "lint:html": "npx htmlhint \"**/*.html\"",
+    "lint:scss": "npx stylelint \"**/*.scss\"",
     "prettier": "pretty-quick"
   },
   "husky": {
@@ -18,6 +19,12 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-push": "npm run lint && npm run test"
     }
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupJest.ts"
+    ]
   },
   "private": true,
   "dependencies": {
@@ -48,22 +55,15 @@
     "@angular/language-service": "^9.1.2",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^25.2.1",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "htmlhint": "^0.11.0",
     "husky": "^4.2.5",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "jest": "^25.3.0",
+    "jest-preset-angular": "^8.1.3",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
-    "protractor": "~5.4.3",
     "rxjs-tslint": "^0.1.8",
     "stylelint": "^13.3.2",
     "ts-node": "~8.3.0",
