--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "htmlhint": "^0.11.0",
     "husky": "^4.2.5",
     "jest": "^25.3.0",
+    "jest-marbles": "^2.5.1",
     "jest-preset-angular": "^8.1.3",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
