--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "emitDecoratorMetadata": true,
     "outDir": "./out-tsc/spec",
     "esModuleInterop": true,
     "types": ["jest", "node"]
